# CoStudy

./: .env.example  .gitignore  AI-驱动的知识共享系统增强.md  HTTP  README.md  SPEC.md  https-proxy.js  warm-dashboard.tsx
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: config.py  database.py  dependencies.py  main.py  redis.py  seed.py
backend/app/api/: __init__.py  ai.py  auth.py  exams.py  providers.py  render.py  resources.py  review.py  textbooks.py  upload.py  videos.py
backend/app/models/: __init__.py  chat.py  exam.py  provider.py  resource.py  textbook.py  user.py  video.py
backend/app/schemas/: __init__.py  resource.py  textbook.py  user.py
backend/app/services/: auth_service.py  llm_service.py  storage_service.py  textbook_service.py
backend/app/tasks/: celery_app.py
backend/tests/: test_auth.py
frontend/: package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/workspace/: layout.tsx
frontend/src/components/layout/: app-shell.tsx  providers.tsx  sidebar-context.tsx  sidebar.tsx  top-header.tsx
frontend/src/components/tree/: textbook-tree.tsx
frontend/src/components/workspace/: excalidraw-editor.tsx  iframe-extension.ts  (+4 more)
frontend/src/hooks/: use-auth.tsx
frontend/src/lib/: api.ts  auth.ts  constants.ts  utils.ts
frontend/src/types/: index.ts
(+28 files in other folders)
